refactor: replace JWT auth with persistent device stream key for cloud API calls
- **Simplifies authentication flow**: Replaces the complex JWT token refresh mechanism with a persistent device stream key that never expires, eliminating the need for token refresh retries and fallback logic
- **Improves reliability**: The stream key is stored locally and used directly for API authentication, removing dependency on JWT token expiry checks and refresh attempts
- **Enhances security**: Uses HMAC-based device stream key for authorization headers instead of Bearer tokens, with proper validation (64-character length check)
- **Updates unlink device flow**: Now authenticates the unlink request using the stream key instead of user ID, and reads the key before clearing local storage
- **Adds new API methods**: Introduces setStreamKey(), getStreamKey(), and clearStreamKey() methods for managing the persistent device credential
- **Updates link success callback**: Accepts the stream key during device linking and stores it immediately, with fallback logging if not provided
- **Fixes URL encoding**: Uses proper URI-to-URL conversion in LocationGeocoder to handle special characters in coordinates
- **Updates development guidelines**: Adds "No Backward Compat" principle to AGENTS.md to prevent silent compatibility shims